--- a/src/styles/Tab.module.css
+++ b/src/styles/Tab.module.css
@@ -11,9 +11,16 @@
   display: inline-block;
   padding: 4px;
   cursor: pointer;
+  border: 1px solid transparent;
+  border-bottom: 0;
+}
+
+.tab_header_button:hover {
+  background: #eee;
 }
 
 .tab_header_button_selected {
-  background: #555;
-  color: white;
+  background: #eee;
+  border: 1px solid #ccc;
+  border-bottom: 0;
 }
