--- a/src/styles/TextArea.module.css
+++ b/src/styles/TextArea.module.css
@@ -15,7 +15,7 @@
 .arrow {
   border-left: 2px solid transparent;
   border-right: 2px solid transparent;
-  border-top: 5px solid #555;
+  border-top: 5px solid #aaa;
 }
 
 .link_label {
@@ -26,5 +26,48 @@
 }
 
 .annotation_attr_rect {
-  transition: all 0.3s;
+  padding: 0 4px;
+  text-align: center;
+  border: 1px solid #ccc;
+  position: relative;
+  border-radius: 2px;
+  font-size: 10px;
+}
+.annotation_attr_rect_selected {
+  display: flex;
+  font-size: 10px;
+}
+
+.annotation_attr_container_selected {
+  border: 1px solid #ccc;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 4px 0;
+}
+
+.annotation_attr_label {
+  display: inline-block;
+  width: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: bold;
+  margin-right: 2px;
+  padding: 2px 4px;
+}
+
+.annotation_attr_value {
+  display: inline-block;
+  width: 120px;
+  padding: 2px 4px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.annotation_line_toggle {
+  position: absolute;
+  left: -22px;
+  width: 18px;
+  font-size: 10px;
+  padding: 0px;
 }
