--- a/src/styles/TextViewer.module.css
+++ b/src/styles/TextViewer.module.css
@@ -16,11 +16,13 @@
 .metadata_side_container {
   flex: 0 0 250px;
   padding: 8px 0;
+  overflow: hidden;
 }
 
 .attributes_side_container {
   flex: 0 0 250px;
   padding: 8px;
+  overflow: hidden;
 }
 
 .text_area_container {
