--- a/src/styles/TextArea.module.css
+++ b/src/styles/TextArea.module.css
@@ -22,3 +22,10 @@
   font-size: 10px;
   padding: 0px;
 }
+
+.link_edit_container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
