--- a/src/styles/LinkEditConnector.module.css
+++ b/src/styles/LinkEditConnector.module.css
@@ -1,3 +1,14 @@
 .link_edit_connector {
   background: #555;
 }
+
+.link_drag_arrow {
+  position: absolute;
+  bottom: -3px;
+  right: 0;
+  transform: rotate(-90deg);
+
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 7px solid #555;
+}
