--- a/src/styles/Annotation.module.css
+++ b/src/styles/Annotation.module.css
@@ -26,7 +26,7 @@
 }
 
 .annotaion_container_to_be_link {
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .annotaion_container_to_be_link:active {
