--- a/src/styles/LinkCreateBox.module.css
+++ b/src/styles/LinkCreateBox.module.css
@@ -5,11 +5,21 @@
   border: 1px solid rgba(9, 154, 235);
   transition: transform 0.36s, opacity 0.36s;
   padding: 8px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 
-.animated {
+.slide_in_animated {
   opacity: 1;
   transform: translateX(0);
+}
+
+.flash_animated_off {
+  background: rgba(255, 0, 0, 0.5);
+}
+
+.flash_animated_on {
+  transition: background 0.5s;
+  background: rgba(255, 0, 0, 0);
 }
 
 .link_create_title {
@@ -41,4 +51,27 @@
 
 .link_to_be_select {
   color: #999;
+}
+
+.legend_attributes {
+  margin-top: 8px;
+}
+
+.legend_attribute_item_title {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.legend_attribute_item input {
+  width: 100%;
+  height: 30px;
+}
+
+.legend_type_container {
+  margin-top: 16px;
+}
+
+.legend_type_title {
+  font-weight: bold;
+  margin-bottom: 4px;
 }
