--- a/src/styles/TextDetail.module.css
+++ b/src/styles/TextDetail.module.css
@@ -1,59 +1,35 @@
-.list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
+.group_name {
+  padding: 4px;
 }
 
-.list li {
-  margin-bottom: 8px;
-}
-
-.lengend_container {
-  padding: 2px 4px;
-}
-
-.lengend_container:hover {
-  cursor: pointer;
-  background: #f8f8f8;
-}
-
-.list li span {
-  vertical-align: middle;
-  margin-left: 4px;
-  pointer-events: none;
-  padding: 2px 4px;
-  display: inline-block;
-  user-select: none;
-  border-radius: 3px;
-}
-
-.metadata {
-  margin-bottom: 8px;
-}
-.metadata_name {
-  font-weight: bold;
-  font-size: 10px;
-}
-
-.metadata_value {
-  font-size: 11px;
-  overflow-wrap: break-word;
-  width: 234px; /* 250 - 16 */
-}
-
-.attribute_name_container {
-  margin-left: 16px;
-}
-
-.attribute_name {
-  padding: 2px 4px;
-}
-
-.attribute_name input {
+.group_name input {
   margin-right: 4px;
 }
 
-.attribute_name:hover {
+.group_name:hover {
   cursor: pointer;
   background: #f8f8f8;
+}
+
+.check_indicator {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+  margin-right: 8px;
+  border: 2px solid red;
+  border-radius: 6px;
+}
+
+.check_indicator_selected {
+  background: red;
+}
+
+.selected_group_indicator {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background: red;
+  border-radius: 3px;
+  margin-right: 4px;
 }
