--- a/src/styles/CreateBox.module.css
+++ b/src/styles/CreateBox.module.css
@@ -8,6 +8,11 @@
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 
+.create_box_group {
+  border: 1px solid red;
+  background: rgba(235, 9, 9, 0.11);
+}
+
 .slide_in_animated {
   opacity: 1;
   transform: translateX(0);
@@ -74,4 +79,31 @@
 .legend_type_title {
   font-weight: bold;
   margin-bottom: 4px;
+}
+
+.group_edit_container h3 {
+  margin: 8px 0;
+  font-size: 13px;
+}
+
+.group_edit_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ffbcbc;
+  padding: 3px 0;
+}
+
+.group_edit_description {
+  font-size: 12px;
+  color: #555;
+}
+
+.buttons button {
+  margin-top: 8px;
+  margin-right: 8px;
+}
+
+.group_edit_item_id {
+  font-size: 12px;
 }
