--- a/src/styles/Link.module.css
+++ b/src/styles/Link.module.css
@@ -11,6 +11,11 @@
   border-right: 2px solid transparent;
   border-top: 5px solid #aaa;
 }
+.arrow_large {
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 6px solid #aaa;
+}
 
 .link_label {
   font-size: 9px;
