update group data model and ui

--- a/src/styles/Annotation.module.css
+++ b/src/styles/Annotation.module.css
@@ -77,3 +77,14 @@
 .annotation_container_in_group {
   border: 1px solid red;
 }
+
+.group_id {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+  background: red;
+  font-size: 10px;
+  padding: 1px 2px;
+  color: white;
+}
