--- a/src/styles/AnnotationDetail.module.css
+++ b/src/styles/AnnotationDetail.module.css
@@ -23,7 +23,7 @@
   padding: 8px;
   margin: 0;
   border-bottom: 1px solid #ccc;
-  background: #eee;
+  background: #f8f8fa;
 }
 
 .annotaition_detail_section_body {
