--- a/src/plugins/Group.module.css
+++ b/src/plugins/Group.module.css
@@ -1,6 +1,7 @@
 .group_name_container {
   padding-top: 8px;
   padding-left: 8px;
+  background: #f8f8fa;
 }
 
 .group_legend_toggle_button,
@@ -18,14 +19,22 @@
   background: rgba(9, 154, 235, 0.2);
   margin: 0 16px 16px 0;
   border-radius: 10px;
+  max-width: 200px;
+  min-height: 100px;
+  vertical-align: top;
 }
 
 .member_item {
   display: inline-block;
-  /* border: 1px solid #555; */
   color: white;
   background: rgba(9, 154, 235, 1);
   padding: 2px 4px;
   border-radius: 3px;
   margin: 0 8px 8px 0;
+  cursor: pointer;
+  min-width: 50px;
+}
+
+.member_item:hover {
+  background: rgba(9, 154, 235, 0.87);
 }
