--- a/src/nlpviewer/styles/TextViewer.module.css
+++ b/src/nlpviewer/styles/TextViewer.module.css
@@ -5,29 +5,28 @@
 
 .layout_container {
   display: flex;
-  height: calc(100vh - 35px);
+  height: calc(100% - 35px);
 }
 
 .metadata_side_container {
   flex: 0 0 250px;
-  padding: 8px 0;
+  padding-top: 8px;
   overflow: hidden;
 }
 
 .attributes_side_container {
   flex: 0 0 250px;
-  padding: 8px;
+  padding-top: 8px;
   overflow: hidden;
 }
 
 .center_area_container {
   border: 1px solid #ccc;
   border-top: none;
-  min-height: calc(100vh - 50px);
+  height: calc(100vh - 50px);
   flex: 1;
   position: relative;
   transition: background 0.2s;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
