--- a/src/plugins/Group.module.css
+++ b/src/plugins/Group.module.css
@@ -16,7 +16,8 @@
   padding-top: 8px;
   padding-left: 8px;
   border: 1px solid #ccc;
-  background: rgba(9, 154, 235, 0.2);
+  /* background: rgba(9, 154, 235, 0.2); */
+  background: rgba(0, 0, 0, 0.1);
   margin: 0 16px 16px 0;
   border-radius: 10px;
   max-width: 200px;
@@ -28,7 +29,8 @@
 .member_item {
   display: inline-block;
   color: white;
-  background: rgba(9, 154, 235, 1);
+  /* background: rgba(9, 154, 235, 1); */
+  background: rgba(0, 0, 0, 0.3);
   padding: 2px 4px;
   border-radius: 3px;
   margin: 0 8px 8px 0;
@@ -37,7 +39,7 @@
 }
 
 .member_item:hover {
-  background: rgba(9, 154, 235, 0.87);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .group_dropped {
