--- a/src/nlpviewer/styles/TextViewer.module.css
+++ b/src/nlpviewer/styles/TextViewer.module.css
@@ -74,6 +74,15 @@
   border-top: 1px solid #ccc;
 }
 
+.scope_selector_container {
+  display: flex;
+  align-items: center;
+}
+
 .scope_selector_container > span {
   margin-right: 8px;
+}
+
+.scope_nav_container {
+  margin-left: 8px;
 }
