--- a/src/plugins/dialogue_box/DialogueBox.module.css
+++ b/src/plugins/dialogue_box/DialogueBox.module.css
@@ -26,3 +26,40 @@
   float: right;
   background-color: #FABD3A;
 }
+.speaker_icon {
+  font-size: 20px;
+  display: inline;
+}
+.table {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  border: 2px solid #4F7849;
+  background-color: #EEEEEE;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+}
+.table td, table th {
+  border: 1px solid #4F7849;
+  padding: 3px 2px;
+}
+.table.comicGreen tbody td {
+  font-size: 19px;
+  font-weight: bold;
+  color: #4F7849;
+}
+.table tr:nth-child(even) {
+  background: #CEE0CC;
+}
+.table tfoot {
+  font-size: 21px;
+  font-weight: bold;
+  color: #FFFFFF;
+  background: #4F7849;
+  background: -moz-linear-gradient(top, #7b9a76 0%, #60855b 66%, #4F7849 100%);
+  background: -webkit-linear-gradient(top, #7b9a76 0%, #60855b 66%, #4F7849 100%);
+  background: linear-gradient(to bottom, #7b9a76 0%, #60855b 66%, #4F7849 100%);
+  border-top: 1px solid #444444;
+}
+.table.comicGreen tfoot td {
+  font-size: 21px;
+}
