Do not import forte if not available.

--- a/src/plugins/dialogue_box/DialogueBox.module.css
+++ b/src/plugins/dialogue_box/DialogueBox.module.css
@@ -6,7 +6,7 @@
   line-height: 1.4;
   margin: 1px 0;
   padding: 8px 17px 6px 13px;
-  max-width: 380px;
+  max-width: 45%;
   position: relative;
   border-radius: 18px;
   color: black;
@@ -18,7 +18,7 @@
   line-height: 1.4;
   margin: 1px 0;
   padding: 8px 17px 6px 13px;
-  max-width: 380px;
+  max-width: 45%;
   position: relative;
   border-radius: 18px;
   color: black;
