Added Annotation Viewer and consent form

--- a/src/crossviewer/styles/TextViewer.module.css
+++ b/src/crossviewer/styles/TextViewer.module.css
@@ -162,6 +162,7 @@
   border-radius: 1em;
   transform: translate(-50%, -50%);
   outline: transparent;
+  overflow-y: auto;
 }
 
 .modal_overlay {
@@ -188,4 +189,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.custom{
+  font-size: 50px;
 }
