database change to record annotationlogs, hightlight NER, hash doc id, change sql query key to pack_id

--- a/src/crossviewer/styles/CrossDocStyle.module.css
+++ b/src/crossviewer/styles/CrossDocStyle.module.css
@@ -15,7 +15,8 @@
 .text_node_container {
   white-space: pre-wrap;
   position: relative;
-  line-height: 20px;
+  line-height: 25px;
+  font-size: 1.1rem;
 }
 
 .annotation_line_toggle {
