--- a/src/plugins/dialogue_box/TextInput.module.css
+++ b/src/plugins/dialogue_box/TextInput.module.css
@@ -1,12 +1,27 @@
 .field {
-  width: 100%;
+  width: 86%;
   height: 56px;
-  border-radius: 4px;
+  border-radius: 10px;
   position: relative;
   background-color: rgba(255,255,255,0.3);
   transition: 0.3s all;
+  font-size:15px;
+  padding-left:15px;
 }
 .field:hover {
   background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+}
+
+.submit_button{
+  width: 11%;
+  height: 56px;
+  margin-left: 3%;
+  padding:0px;
+  font-size:15px;
+  background-color: #147efb;
+  border:3px solid #147efb;
+  color:white;
+  border-radius: 10px;
+
 }
